# IIG_TP

./: .gitignore  CMakeLists.txt  README.md
data/: fragment_shader.frag  ressources.qrc  vertex_shader.txt
shaders/: animation.frag.glsl  animation.vert.glsl  cubemap.frag.glsl  cubemap.vert.glsl  cubemap2.frag.glsl  cubemap2.vert.glsl  phong_tess.frag.glsl  phong_tess.tesc.glsl  phong_tess.tese.glsl  phong_tess.vert.glsl  pn_tess.frag  pn_tess.tesc.glsl  pn_tess.tese.glsl  pn_tess.vert
src/: bone.cpp  bone.h  mainwindow.cpp  mesh.cpp  mesh.h  myopenglwidget.cpp  opengldemo.cpp  shader.cpp  shader.h  shaders.cpp  shaders.h  utils.cpp  utils.h
src/PhongTessellation/: phongtessellation.cpp  phongtessellation.h
src/PnTriangles/: pntriangles.cpp  pntriangles.h
src/animation/: animation.cpp  animation.h
src/cubemap/: cubemap.cpp  cubemap.h
src/hello_camera/: camera.h
src/hello_triangles/: hellotriangles.h
src/obj3pointslight/: obj3pointslight.cpp  obj3pointslight.h
src/parametric_sphere/: parametric_sphere.cpp  parametric_sphere.h
src/sphere/: sphere.cpp  sphere.h
